compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__module_const_fn.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn int_identity(i: Int) -> Int { i }\npub const int_identity_alias: fn(Int) -> Int = int_identity\npub fn use_int_identity_alias() { int_identity_alias(42) }\n\npub const compound: #(fn(Int) -> Int, fn(Int) -> Int) = #(int_identity, int_identity_alias)\npub fn use_compound() { compound.0(compound.1(42)) }"
---
export function int_identity(i) {
  return i;
}

export const int_identity_alias = int_identity;

export function use_int_identity_alias() {
  return int_identity_alias(42);
}

export const compound = [int_identity, int_identity_alias];

export function use_compound() {
  return compound[0](compound[1](42));
}

