compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__pipeline_has_correct_semicolons.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn main() {\n  1 |> echo |> fn(x) { { x + 1 } * 2 }\n  { 1 + 2 } * 3\n}\n"
---
----- SOURCE CODE

pub fn main() {
  1 |> echo |> fn(x) { { x + 1 } * 2 }
  { 1 + 2 } * 3
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  let _pipe = 1;
  echo(_pipe, undefined, "src/module.gleam", 3);
  ((x) => { return (x + 1) * 2; })(_pipe);
  return (1 + 2) * 3;
}

// ...omitted code from `templates/echo.mjs`...
